--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "expo-image-picker": "~13.1.1",
-    "expo-location": "~14.2.2"
+    "expo-location": "~14.2.2",
+    "react-native-maps": "0.30.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
